--- a/source/layout.html
+++ b/source/layout.html
@@ -352,7 +352,7 @@
         {% if theme.footer_text != blank and theme.footer_text_position == "end" %}
           <div class="footer-custom-content">{{ theme.footer_text }} </div>
         {% endif %}
-        <div class="footer-store-credit">{{ powered_by_big_cartel }}</div>
+        <div class="footer-store-credit" data-bc-hook="credit">{{ powered_by_big_cartel }}</div>
       </div>
     </footer>
     <div id="mobile-navigation" aria-hidden="true" role="dialog" aria-modal="true">
