--- a/source/layout.html
+++ b/source/layout.html
@@ -63,8 +63,8 @@
           <div class="store-name {% if theme.logo != blank %}image{% else %}text{% endif %}">
             <a href="/" title="{{ store.name | escape }}" class="header-store-link header-store-link--{% if theme.logo != blank %}logo{% else %}text{% endif %}">
               {% if theme.logo != blank %}
-                {% assign logo_image_height_1x = theme.logo_image_height | times: 3 %}
-                {% assign logo_image_height_2x = logo_image_height_1x | times: 2 %}
+                {% assign logo_image_height_1x = theme.logo_image_height %}
+                {% assign logo_image_height_2x = theme.logo_image_height | times: 2 %}
                 <img
                   class="store-logo"
                   srcset="{{ theme.images.logo.url | constrain: '', logo_image_height_1x }}, {{ theme.images.logo.url | constrain: '', logo_image_height_2x }} 2x"
