--- a/source/contact.html
+++ b/source/contact.html
@@ -9,7 +9,7 @@
 {% if contact.sent %}
   <div class="message-banner message-banner--no-bg message-banner--centered">Thanks! Your message has been sent and we'll get back to you soon.</div>
 {% else %}
-  {% if theme.contact_text %}
+  {% if theme.contact_text != blank %}
     <div class="message-banner message-banner--contact">{{ theme.contact_text }}</div>
   {% endif %}
   <form method="post" action="/contact" class="contact-form">
