--- a/source/product.html
+++ b/source/product.html
@@ -1,11 +1,13 @@
 {% assign product_status = '' %}
 {% case product.status %}
 	{% when 'active' %}
-		{% if product.on_sale %}{% assign product_status = 'On sale' %}{% endif %}
+		{% if product.on_sale %}
+      {% assign product_status = t['products.on_sale'] %}
+    {% endif %}
 	{% when 'sold-out' %}
-		{% assign product_status = 'Sold out' %}
+		{% assign product_status = t['products.sold_out'] %}
 	{% when 'coming-soon' %}
-		{% assign product_status = 'Coming soon' %}
+		{% assign product_status = t['products.coming_soon'] %}
 {% endcase %}
 
 <div class="product-container">
@@ -154,8 +156,8 @@
                 <input id="option" name="cart[add][id]" type="hidden" value="0">
                 {% for option_group in product.option_groups %}
                   <div class="select">
-                    <select data-unavailable-text="(Unavailable)" data-sold-text="(Sold out)" data-group-id="{{ option_group.id }}" data-group-name="{{ option_group.name | escape }}" class="product_option_group" name="option_group[{{ option_group.id }}]" aria-label="Select {{ option_group.name | escape }}" required>
-                      <option value="" disabled="disabled" selected>Select {{ option_group.name }}</option>
+                    <select data-unavailable-text="(Unavailable)" data-sold-text="({{ t['products.sold_out'] }})" data-group-id="{{ option_group.id }}" data-group-name="{{ option_group.name | escape }}" class="product_option_group" name="option_group[{{ option_group.id }}]" aria-label="Select {{ option_group.name | escape }}" required>
+                      <option value="" disabled="disabled" selected>{{ option_group.name }}</option>
                       {% for value in option_group.values %}
                         <option value="{{ value.id }}" data-name="{{ value.name | escape }}">{{ value.name }}</option>
                       {% endfor %}
@@ -166,10 +168,10 @@
               </div>
             {% else %}
               <div class="select">
-                <select class="product-option-select" id="option" name="cart[add][id]" aria-label="Select variant" required>
-                  <option value="" disabled="disabled" selected>Select variant</option>
+                <select class="product-option-select" id="option" name="cart[add][id]" aria-label="{{ t['products.select_variant'] }}" required>
+                  <option value="" disabled="disabled" selected>{{ t['products.select_variant'] }}</option>
                   {% for option in product.options %}
-                    <option value="{{ option.id }}" data-price="{{ option.price }}"{% if option.sold_out %} disabled="disabled" disabled-type="sold-out"{% endif %}>{{ option.name }} {% if option.sold_out %} (Sold out){% endif %}</option>
+                    <option value="{{ option.id }}" data-price="{{ option.price }}"{% if option.sold_out %} disabled="disabled" disabled-type="sold-out"{% endif %}>{{ option.name }} {% if option.sold_out %} ({{ t['products.sold_out'] }}){% endif %}</option>
                   {% endfor %}
                 </select>
                 <svg aria-hidden="true" fill="currentColor" class="down-arrow" width="13" height="15" viewBox="0 0 13 15" xmlns="http://www.w3.org/2000/svg"><path d="M13 8.35885695l-1.05568445-1.0024981-4.69025523 4.39122407V-4e-7H5.74593968v11.74758332L1.0556845 7.35635885 0 8.35885695 6.5 14.444444z" fill-rule="nonzero"/></svg>
@@ -177,12 +179,12 @@
             {% endif %}
           </div>
         {% endif %}
-        <button class="button add-to-cart-button" name="submit" type="submit" data-add-title="Add to cart" data-sold-title="Sold out">Add to cart</button>
+        <button class="button add-to-cart-button" name="submit" type="submit" data-add-title="{{ t['products.add_to_cart'] }}" data-sold-title="{{ t['products.sold_out'] }}">{{ t['products.add_to_cart'] }}</button>
         {{ store | instant_checkout_button: 'dark', '44px' }}
         <div class="inventory-status-message" data-inventory-message></div>
         {% if product.has_option_groups %}
           <div class="reset-selection-button-container">
-            <button class="button button--minimal reset-selection-button" type="reset">Reset selection</button>
+            <button class="button button--minimal reset-selection-button" type="reset">{{ t['products.reset'] }}</button>
           </div>
         {% endif %}
       </form>
