chore: add `data-bc-hook` for page content and product containers

--- a/source/layout.html
+++ b/source/layout.html
@@ -146,7 +146,7 @@
       </nav>
     </header>
     <main class="content" id="main">
-      <div class="wrapper">
+      <div class="wrapper" data-bc-hook="content">
         {% if page.category == 'custom' %}
           <h1 class="page-title">{{ page.name }}</h1>
           <div class="page-content {{ page.category }}-content">
