--- a/source/home.html
+++ b/source/home.html
@@ -92,7 +92,10 @@
         </div>
       {% endfor %}
     </div>
-    {% if theme.all_products_button_text != blank %}<a class="button centered-button all-products-button" href="/products">{{ theme.all_products_button_text }}</a>{% endif %}
+    {% assign all_products_button_text = t['home.all_products'] %}
+    {% if all_products_button_text != blank %}
+      <a class="button centered-button all-products-button" href="/products">{{ all_products_button_text }}</a>
+    {% endif %}
   {% endif %}
 
 {% else %}
@@ -191,7 +194,10 @@
             </div>
           </div>
           {% if paginate.pages > 1 %}
-            {% if theme.all_products_button_text != blank %}<a class="button centered-button all-products-button" href="/products">{{ theme.all_products_button_text }}</a>{% endif %}
+            {% assign all_products_button_text = t['home.all_products'] %}
+            {% if all_products_button_text != blank %}
+              <a class="button centered-button all-products-button" href="/products">{{ all_products_button_text }}</a>
+            {% endif %}
           {% endif %}
         {% else %}
           <div class="message-banner message-banner--centered message-banner--no-bg">{{ t['products.no_products'] }}</div>
