--- a/source/home.html
+++ b/source/home.html
@@ -101,7 +101,10 @@
 {% else %}
   {% if theme.featured_items > 0 %}
     <div class="home-featured-products">
-      <h1 class="page-title">{{ theme.featured_header }}</h1>
+      {% assign featured_header = t['home.featured'] %}
+      {% if featured_header != blank %}
+        <h1 class="page-title">{{ featured_header }}</h1>
+      {% endif %}
       {% paginate products from products.current by theme.featured_items order:theme.featured_order %}
         {% assign num_results = paginate.items %}
         {% if paginate.next.is_link %}
