--- a/source/layout.html
+++ b/source/layout.html
@@ -117,12 +117,15 @@
                     <svg aria-hidden="true" fill="currentColor" class="category-nav-arrow" viewBox="0 0 15 7.6" enable-background="new 0 0 15 7.6"><path d="M15 1.1l-7.5 6.5-7.5-6.3 1-1.2 6.5 5.5 6.5-5.6z"/></svg>
                   </button>
                   <div class="category-dropdown" id="header-dropdown" aria-hidden="true">
-                    {% if categories.active != blank %}
+                    {% if categories.active != blank or pages.subscribe_url %}
                       <ul class="dropdown-list categories-list">
                         <li><a href="/products">{{ t['navigation.all_products'] }}</a></li>
                         {% for category in categories.active %}
                           <li>{{ category | link_to }}</li>
                         {% endfor %}
+                        {% if pages.subscribe_page %}
+                          <li class="artist-support"><a href="{{ pages.subscribe_page.url }}">{{ t['navigation.subscribe'] }}</a></li>
+                        {% endif %}
                       </ul>
                     {% endif %}
                   </div>
@@ -133,8 +136,8 @@
             </li>
 
             {% if theme.nav_page_display == 'all' or theme.nav_page_display == 'pages_only' %}
-              {% for page in pages.all limit: theme.nav_items %}
-              <li class="header-page-link">{{ page | link_to }}</li>
+              {% for custom_page in pages.custom_pages limit: theme.nav_items %}
+              <li class="header-page-link">{{ custom_page | link_to }}</li>
               {% endfor %}
             {% endif %}
 
@@ -266,16 +269,28 @@
         {% if theme.footer_text != blank and theme.footer_text_position == "start" %}
           <div class="footer-custom-content">{{ theme.footer_text }} </div>
         {% endif %}
+
+        {% assign show_pages_section_in_footer = false %}
+        {% if theme.nav_page_display_footer == "all" or theme.nav_page_display_footer == "pages_only" %}
+          {% if pages.custom_pages.size > 0 %}
+            {% assign show_pages_section_in_footer = true %}
+          {% endif %}
+        {% endif %}
+        {% if pages.required_pages.size > 0 %}
+          {% assign show_pages_section_in_footer = true %}
+        {% endif %}
+
     		<nav class="footer-nav-links footer-nav-links--main" aria-label="Footer main">
           <ul>
             <li><a href="/">{{ t['navigation.home'] }}</a></li>
             <li><a href="/products">{{ t['navigation.products'] }}</a></li>
-            {% if theme.show_custom_pages_in_footer and pages.all.size <= 2 %}
-              {% for page in pages.all %}
-                <li>{{ page | link_to }}</li>
-              {% endfor %}
+            {% if pages.subscribe_page %}
+              <li class="artist-support"><a href="{{ pages.subscribe_page.url }}">{{ t['navigation.subscribe'] }}</a></li>
             {% endif %}
-            <li><a href="/contact">{{ t['navigation.contact'] }}</a></li>
+            {% if theme.nav_page_display_footer == "all" or theme.nav_page_display_footer == "contact_only" %}
+              <li><a href="/contact">{{ t['navigation.contact'] }}</a></li>
+            {% endif %}
+            
             <li><a href="/cart">{{ t['navigation.cart'] }} (<span class="cart-num-items">{{ cart.item_count }}</span>)</a></li>
           </ul>
         </nav>
@@ -288,12 +303,23 @@
             </ul>
           </nav>
         {% endif %}
-        {% if theme.show_custom_pages_in_footer and pages.all.size >= 3 %}
+
+        {% if show_pages_section_in_footer %}
           <nav class="footer-nav-links footer-nav-links--pages" aria-label="Footer pages">
             <ul>
-            {% for page in pages.all %}
-              <li>{{ page | link_to }}</li>
-            {% endfor %}
+            {% if theme.nav_page_display_footer == 'all' or theme.nav_page_display_footer == 'pages_only' %}
+              {% for custom_page in pages.custom_pages limit: theme.nav_items_footer %}
+                <li>{{ custom_page | link_to }}</li>
+              {% endfor %}
+            {% endif %}
+            {% if store.website != blank %}
+              <li><a href="{{ store.website }}">{{ t['navigation.back_to_site'] }}</a></li>
+            {% endif %}
+            {% if pages.required_pages.size > 0 %}
+              {% for required_page in pages.required_pages %}
+                <li><a href="{{ required_page.url }}">{{ required_page.name }}</a></li>
+              {% endfor %}
+            {% endif %}
             </ul>
           </nav>
         {% endif %}
@@ -415,14 +441,35 @@
             </ul>
           </nav>
 
-          <nav aria-label="Pages">
-            <ul class="mobile-navigation__links">
-              {% for page in pages.all %}
-                <li>{{ page | link_to }}</li>
-              {% endfor %}
-              <li><a href="/contact">{{ t['navigation.contact'] }}</a></li>
-            </ul>
-          </nav>
+          {% if theme.nav_page_display != "none" or pages.subscribe_page %}
+            <nav aria-label="Pages">
+              <ul class="mobile-navigation__links mobile-navigation__links--with-divider">
+                {% if pages.subscribe_page %}
+                  <li class="artist-support"><a href="{{ pages.subscribe_page.url }}">{{ t['navigation.subscribe'] }}</a></li>
+                {% endif %}
+
+                {% if theme.nav_page_display == "all" or theme.nav_page_display == "pages_only" %}
+                  {% for custom_page in pages.custom_pages limit: theme.nav_items_footer %}
+                    <li>{{ custom_page | link_to }}</li>
+                  {% endfor %}
+                {% endif %}
+
+                {% if theme.nav_page_display == "all" or theme.nav_page_display == "contact_only" %}
+                  <li><a href="/contact">{{ t['navigation.contact'] }}</a></li>
+                {% endif %}
+              </ul>
+            </nav>
+          {% endif %}
+
+          {% if pages.required_pages.size > 0 %}
+            <nav aria-label="Pages">
+              <ul class="mobile-navigation__links mobile-navigation__links--with-divider">
+                  {% for required_page in pages.required_pages %}
+                    <li>{{ required_page | link_to }}</li>
+                  {% endfor %}
+              </ul>
+            </nav>
+          {% endif %}
 
           {% if theme.instagram_url != blank
             or theme.tiktok_url != blank
