--- a/source/home.html
+++ b/source/home.html
@@ -14,7 +14,7 @@
 {% if theme.welcome_image or has_slideshow or theme.welcome_text != blank %}
   <div class="home-welcome stacked">
     {% if has_slideshow %}
-      <div class="{% if theme.image_sets.slideshow.size > 1 %}splide{% endif %} home-slideshow">
+      <div class="{% if theme.image_sets.slideshow.size > 1 %}splide{% endif %} home-slideshow" data-autoplay="{{ theme.homepage_slideshow_autoplay }}">
         <div class="splide__track">
           <div class="splide__list">
             {% for image in theme.image_sets.slideshow %}
