--- a/source/home.html
+++ b/source/home.html
@@ -14,11 +14,11 @@
 {% if theme.welcome_image or has_slideshow or theme.welcome_text != blank %}
   <div class="home-welcome stacked">
     {% if has_slideshow %}
-      <div class="{% if theme.image_sets.slideshow.size > 1 %}splide{% endif %} home-slideshow" data-autoplay="{{ theme.homepage_slideshow_autoplay }}">
+      <div class="splide home-slideshow" data-autoplay="{{ theme.homepage_slideshow_autoplay }}">
         <div class="splide__track">
           <div class="splide__list">
             {% for image in theme.image_sets.slideshow %}
-              <div class="splide__slide">
+              <div class="splide__slide"{% if theme.hero_link != blank %} title="{{ theme.hero_link }}"{% endif %}>
                 <img
                   alt="Slideshow image {{ forloop.index }}"
                   {% if forloop.index == 1 %}fetchpriority="high"{% else %}loading="lazy"{% endif %}
@@ -42,6 +42,7 @@
           {{ theme.images.welcome_image.url | constrain: 2000 }} 2000w,
         "
         data-sizes="auto"
+        {% if theme.hero_link != blank %} title="{{ theme.hero_link }}"{% endif %}
       >
     {% endif %}
     {% if has_slideshow == false %}
