--- a/source/layout.html
+++ b/source/layout.html
@@ -246,11 +246,22 @@
                           <div class="product-list-thumb-info">
                             <div class="product-list-thumb-name">{{ related_product.name }}</div>
                             <div class="product-list-thumb-price">
-                              {% if related_product.variable_pricing %}
-                                {{ related_product.min_price | money: theme.money_format }} - {{ related_product.max_price | money: theme.money_format }}
-                              {% else %}
-                                {{ related_product.default_price | money: theme.money_format }}
-                              {% endif %}
+                              {% unless related_product.status == 'sold-out' and theme.show_sold_out_product_prices == false %}
+                                {% if related_product.variable_pricing %}
+                                  {{ related_product.min_price | money: theme.money_format }} - {{ related_product.max_price | money: theme.money_format }}
+                                {% else %}
+                                  {{ related_product.default_price | money: theme.money_format }}
+                                {% endif %}
+
+                                {% if related_product.price_suffix != blank %}
+                                  {% if related_product.variable_pricing %}
+                                    {% assign formatted_suffix = '(' | append: related_product.price_suffix | append: ')' %}
+                                  {% else %}
+                                    {% assign formatted_suffix = related_product.price_suffix %}
+                                  {% endif %}
+                                  <span class="price-suffix">{{ formatted_suffix }}</span>
+                                {% endif %}
+                              {% endunless %}
                             </div>
                           </div>
                         </a>
