--- a/source/product.html
+++ b/source/product.html
@@ -117,11 +117,7 @@
   <section class="product-detail">
     <div class="product-detail__header">
       {% capture product_pricing %}
-        {% if product.variable_pricing and hide_price == false %}
-          {{ product.min_price | money: theme.money_format }} - {{ product.max_price | money: theme.money_format }}
-        {% else %}
-          {{ product.default_price | money: theme.money_format }}
-        {% endif %}
+        {{ product | product_price: theme.money_format }}
 
         {% if product.price_suffix != blank %}
           {% if product.variable_pricing %}
