--- a/source/layout.html
+++ b/source/layout.html
@@ -79,12 +79,15 @@
           <div class="store-name {% if theme.logo != blank %}image{% else %}text{% endif %}">
             <a href="/" title="{{ store.name | escape }}" class="header-store-link header-store-link--{% if theme.logo != blank %}logo{% else %}text{% endif %}">
               {% if theme.logo != blank %}
-                {% assign logo_image_height_1x = theme.logo_image_height %}
-                {% assign logo_image_height_2x = theme.logo_image_height | times: 2 %}
+                {% comment %} Calculate optimal image size with width and height constraints for DPI optimization {% endcomment %}
+                {% assign display_height = theme.logo_image_size %}
+                {% assign optimal_width = display_height | times: 6 %}
+                {% assign retina_width = optimal_width | times: 2 %}
+                {% assign retina_height = display_height | times: 2 %}
                 <img
                   class="store-logo"
-                  srcset="{{ theme.images.logo.url | constrain: '', logo_image_height_1x }}, {{ theme.images.logo.url | constrain: '', logo_image_height_2x }} 2x"
-                  src="{{ theme.images.logo.url | constrain: '', logo_image_height_1x }}"
+                  srcset="{{ theme.images.logo.url | constrain: optimal_width, display_height }} 1x, {{ theme.images.logo.url | constrain: retina_width, retina_height }} 2x"
+                  src="{{ theme.images.logo.url | constrain: optimal_width, display_height }}"
                   alt="{{ store.name }} Home"
                 >
               {% else %}
