--- a/source/maintenance.html
+++ b/source/maintenance.html
@@ -9,7 +9,7 @@
   </head>
   <body id="{{ page.permalink }}">
     <div class="maintenance-container">
-      <h1 class="maintenance-store-name{% unless theme.show_shop_name_on_maintenance_page %} visually-hidden{% endunless %}">{{ store.name }}</h1>
+      <h1 class="maintenance-store-name{% if theme.show_shop_name_on_maintenance_page == false %} visually-hidden{% endif %}">{{ store.name }}</h1>
       {% if theme.maintenance_image.url != blank %}
         <img src="{{ theme.maintenance_image.url }}" alt="" loading="lazy" class="maintenance-image">
       {% endif %}
