fix: correctly reference theme images with `theme.images`

--- a/source/home.html
+++ b/source/home.html
@@ -11,7 +11,7 @@
   {% assign has_slideshow = true %}
 {% endif %}
 
-{% if theme.welcome_image or has_slideshow or theme.welcome_text != blank %}
+{% if theme.images.welcome_image or has_slideshow or theme.welcome_text != blank %}
   <div class="home-welcome stacked">
     {% if has_slideshow %}
       <div class="splide home-slideshow" data-autoplay="{{ theme.homepage_slideshow_autoplay }}">
@@ -30,7 +30,7 @@
           </div>
         </div>
       </div>
-    {% elsif theme.welcome_image %}
+    {% elsif theme.images.welcome_image != blank %}
       <img
         alt=""
         class="lazyload welcome-image blur-up"
@@ -49,7 +49,7 @@
       <div class="welcome-overlay"></div>
     {% endif %}
     {% if theme.welcome_text != blank %}
-      <div class="welcome-message{% if theme.welcome_image %} with-image{% endif %}">
+      <div class="welcome-message{% if theme.images.welcome_image %} with-image{% endif %}">
         {% if theme.welcome_text != blank %}<div class="welcome-message-text">{{ theme.welcome_text }}</div>{% endif %}
       </div>
     {% endif %}
