--- a/source/maintenance.html
+++ b/source/maintenance.html
@@ -10,8 +10,8 @@
   <body id="{{ page.permalink }}">
     <div class="maintenance-container">
       <h1 class="maintenance-store-name{% if theme.show_shop_name_on_maintenance_page == false %} visually-hidden{% endif %}">{{ store.name }}</h1>
-      {% if theme.maintenance_image.url != blank %}
-        <img src="{{ theme.maintenance_image.url }}" alt="" loading="lazy" class="maintenance-image">
+      {% if theme.images.maintenance_image != blank %}
+        <img src="{{ theme.images.maintenance_image.url | constrain: 800 }}" alt="" loading="lazy" class="maintenance-image">
       {% endif %}
       {% if theme.maintenance_message != blank %}<div class="maintenance-message">{{ theme.maintenance_message }}</div>{% endif %}
 
