chore: standardize contact and cart button attributes
  - Add id="contact_button" to all contact form submit buttons
  - Add id="add-to-cart-button" to all cart form submit buttons
  - Remove redundant name attributes

--- a/source/contact.html
+++ b/source/contact.html
@@ -47,7 +47,7 @@
         </div>
       </div>
       <div class="contact-form-block contact-send">
-        <button class="button centered-button" type="submit" name="submit">{{ t['contact.send_button'] }}</button>
+        <button id="contact_button" class="button centered-button" type="submit">{{ t['contact.send_button'] }}</button>
       </div>
       <div class="contact-form-block recaptcha-note">
         <p>{{ contact.recaptcha }}</p>
