--- a/source/home.html
+++ b/source/home.html
@@ -127,7 +127,8 @@
         </div>
       {% endfor %}
     </div>
-    {% if theme.homepage_show_all_items_link %}
+    {%- comment -%} Only show All Products button when eligible (categories shown, so products aren't displayed yet) {%- endcomment -%}
+    {% if theme.homepage_show_all_items_link and products.all.size > 0 %}
       {% assign all_products_button_text = t['home.all_products'] %}
       {% if all_products_button_text != blank %}
         <a class="button centered-button all-products-button" href="/products">{{ all_products_button_text }}</a>
