bug fix for website link in footer
currently the website link won't appear in the footer if there aren't any custom pages or policy pages set, since the website link conditional is contained within a parent conditional that checks if `show_pages_section_in_footer` is true. this fix adds `show_pages_section_in_footer = true` when a website link is present

--- a/source/layout.html
+++ b/source/layout.html
@@ -324,6 +324,9 @@
         {% if pages.required_pages.size > 0 %}
           {% assign show_pages_section_in_footer = true %}
         {% endif %}
+        {% if store.website != blank %}
+          {% assign show_pages_section_in_footer = true %}
+        {% endif %}
 
     		<nav class="footer-nav-links footer-nav-links--main" aria-label="Footer main">
           <ul>
